--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="btnDetails">Details</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Please select an item</string>
-    <string name="mission_name">Mission name:</string>
-    <string name="launch_date">Launch date:</string>
-    <string name="launch_site_name">Launch site name:</string>
-    <string name="rocket_name">Rocket name:</string>
+    <string name="mission_name">Mission name: %s</string>
+    <string name="launch_date">Launch date: %s</string>
+    <string name="launch_site_name">Launch site name: %s</string>
+    <string name="rocket_name">Rocket name: %s</string>
 </resources>
